Fix issue with standard mouse events being called on mobile devices

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -3773,6 +3773,7 @@ only screen and (max-device-width: 320px) {
   bottom: 24px;
   right: 24px;
   z-index: 1;
+  touch-action: none;
 }
 .fixed-action-button.sectioned {
   right: 75px;
